@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 23-05-2005 changed: Info on visualisation fades in/out on Shoutcast track change as well as normal track change.
+ - 23-05-2005 removed: Unusued code in VideoOverlay and MusicOverlay.
  - 23-05-2005 fixed: Better seek bar behaviour at end of media.
  - 23-05-2005 added: PAPlayer v2.
  - 23-05-2005 changed: Cleaned up video renderers + merged the interface for mplayer + dvdplayer.
